Rename test and change it to use TestHelper